tests/additional/fail/function-cast.mvm
function void foo(int x) {
    print(x);
}

foo('hi');
